--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,3 +4,9 @@
     name: nginx
     enabled: yes
     state: reloaded
+
+- name: restart nginx
+  service:
+    name: nginx
+    enabled: yes
+    state: restarted
