--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -46,7 +46,7 @@
   loop_control:
     loop_var: nginx_site
 
-- name: Create master cofnig
+- name: Create master config
   template:
     dest: /etc/nginx/nginx.conf
     src: '{{ nginx_basic_template }}'
