--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -29,6 +29,36 @@ nginx_firewalld_ignore_errors: false
 nginx_basic_template: nginx-main.conf.j2
 nginx_sendfile_enable: true
 
+nginx_log_formats:
+   - name: main
+     format: |
+         '$remote_addr - $remote_user [$time_local] "$request" '
+         '$status $body_bytes_sent "$http_referer" '
+         '"$http_user_agent" "$http_x_forwarded_for" '
+         'TR:$request_time US:$upstream_response_time'
+   - name: json_combined
+     escape: json
+     format: |
+         '{ "time_local": "$time_local", '
+         '"remote_addr": "$remote_addr", '
+         '"remote_user": "$remote_user", '
+         '"request": "$request", '
+         '"method": "$request_method", '
+         '"request_uri": "$request_uri", '
+         '"uri": "$uri", '
+         '"http_protocol": "$server_protocol", '
+         '"status": $status, '
+         '"body_bytes_sent": $body_bytes_sent, '
+         '"content_type": "$sent_http_content_type", '
+         '"request_time": $request_time, '
+         '"backend_time": "$upstream_response_time", '
+         '"http_host": "$http_host", '
+         '"http_referrer": "$http_referer", '
+         '"http_user_agent": "$http_user_agent" }'
+   - name: prometheus
+     format: |
+         'time:$request_time backend_time:$upstream_response_time status=$status host="$host" method="$request_method"'
+
 nginx_sites: []
 #  - name: gitlab.toaster.cz
 #    is_default: true
