--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,7 +21,11 @@ nginx_sebool_enable_connect: true
 
 nginx_dhparam_bits: 2048
 
+# make backup of master config?
+nginx_make_master_config_backup: true
+# make backup of site configs?
 nginx_make_config_backup: false
+
 
 nginx_firewalld_enable: true
 nginx_firewalld_ignore_errors: false
