--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -54,6 +54,15 @@
   notify: reload nginx
   tags: nginx.master.config
 
+- name: Create maps.conf
+  template:
+    src: nginx-maps.conf.j2
+    dest: /etc/nginx/conf.d/maps.conf
+    backup: '{{ nginx_make_map_config_backup }}'
+  notify: reload nginx
+  when: nginx_global_maps
+  tags: nginx-maps
+
 - name: Create .well-known directory
   file:
     dest: /var/www/.well-known
