--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -2,5 +2,5 @@
 - name: Install nginx DEB
   apt:
     name: '{{item}}'
-    state: installed
+    state: present
   with_items: '{{ nginx_deb_packages }}'
