--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -1,6 +1,5 @@
 ---
 - name: Install nginx DEB
   apt:
-    name: '{{item}}'
-    state: present
-  with_items: '{{ nginx_deb_packages }}'
+    name: '{{ nginx_deb_packages }}'
+    state: installed
