--- a/tasks/nginx_static_site.yml
+++ b/tasks/nginx_static_site.yml
@@ -118,6 +118,7 @@
 
 - name: Make sure we can restart nginx
   command: systemctl reset-failed nginx
+  changed_when: false
 
 - meta: flush_handlers 
   when: not nginx_less_restarts|default(False)
