--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,11 +2,11 @@
 - name: reload nginx
   service:
     name: nginx
-    enabled: yes
+    enabled: true
     state: reloaded
 
 - name: restart nginx
   service:
     name: nginx
-    enabled: yes
+    enabled: true
     state: restarted
